force-app/main/default/objects/PlanningApplication__c/PlanningApplication__c.object-meta.xml
<CustomObject>
    <description>Planning case record linked to a Gazetteer property.</description>
    <label>Planning Application</label>
    <nameField>
        <displayFormat>PLA-{00000}</displayFormat>
        <label>Planning Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planning Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>