force-app/main/default/objects/PlanningApplication__c/fields/ApplicantEmail__c.field-meta.xml
<CustomField>
    <fullName>ApplicantEmail__c</fullName>
    <description>Primary applicant email address.</description>
    <label>Applicant Email</label>
    <type>Email</type>
</CustomField>