force-app/main/default/objects/PlanningApplication__c/fields/ApplicantName__c.field-meta.xml
<CustomField>
    <fullName>ApplicantName__c</fullName>
    <description>Primary applicant full name.</description>
    <label>Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>