force-app/main/default/objects/PlanningApplication__c/fields/ApplicantPhone__c.field-meta.xml
<CustomField>
    <fullName>ApplicantPhone__c</fullName>
    <description>Primary applicant phone number.</description>
    <label>Applicant Phone</label>
    <type>Phone</type>
</CustomField>