force-app/main/default/objects/PlanningApplication__c/fields/ApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>ApplicationStatus__c</fullName>
    <description>Current lifecycle stage of the planning application.</description>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
            <value><fullName>Validation</fullName><default>false</default><label>Validation</label></value>
            <value><fullName>In Assessment</fullName><default>false</default><label>In Assessment</label></value>
            <value><fullName>Consultation</fullName><default>false</default><label>Consultation</label></value>
            <value><fullName>Decision Issued</fullName><default>false</default><label>Decision Issued</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>