force-app/main/default/objects/PlanningApplication__c/fields/ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationType__c</fullName>
    <description>Planning application type submitted by applicant.</description>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Householder</fullName><default>false</default><label>Householder</label></value>
            <value><fullName>Full</fullName><default>false</default><label>Full</label></value>
            <value><fullName>Outline</fullName><default>false</default><label>Outline</label></value>
            <value><fullName>Reserved Matters</fullName><default>false</default><label>Reserved Matters</label></value>
            <value><fullName>Listed Building Consent</fullName><default>false</default><label>Listed Building Consent</label></value>
            <value><fullName>Advertisement Consent</fullName><default>false</default><label>Advertisement Consent</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>