force-app/main/default/objects/PlanningApplication__c/fields/CaseOfficer__c.field-meta.xml
<CustomField>
    <fullName>CaseOfficer__c</fullName>
    <description>Planning officer responsible for the case.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Planning Applications</relationshipLabel>
    <relationshipName>PlanningApplications</relationshipName>
    <type>Lookup</type>
</CustomField>