force-app/main/default/objects/PlanningApplication__c/fields/DecisionDate__c.field-meta.xml
<CustomField>
    <fullName>DecisionDate__c</fullName>
    <description>Date decision was issued.</description>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>