force-app/main/default/objects/PlanningApplication__c/fields/DecisionOutcome__c.field-meta.xml
<CustomField>
    <fullName>DecisionOutcome__c</fullName>
    <description>Final decision outcome.</description>
    <label>Decision Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Approved with Conditions</fullName><default>false</default><label>Approved with Conditions</label></value>
            <value><fullName>Refused</fullName><default>false</default><label>Refused</label></value>
            <value><fullName>Withdrawn</fullName><default>false</default><label>Withdrawn</label></value>
            <value><fullName>Appeal</fullName><default>false</default><label>Appeal</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>