force-app/main/default/objects/PlanningApplication__c/fields/GazetteerProperty__c.field-meta.xml
<CustomField>
    <fullName>GazetteerProperty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gazetteer Property</label>
    <referenceTo>GazetteerProperty__c</referenceTo>
    <relationshipLabel>Planning Applications</relationshipLabel>
    <relationshipName>PlanningApplications</relationshipName>
    <type>Lookup</type>
</CustomField>