force-app/main/default/objects/PlanningApplication__c/fields/PortalSubmission__c.field-meta.xml
<CustomField>
    <fullName>PortalSubmission__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates record was submitted through portal.</description>
    <label>Portal Submission</label>
    <type>Checkbox</type>
</CustomField>