force-app/main/default/objects/PlanningApplication__c/fields/ProposalSummary__c.field-meta.xml
<CustomField>
    <fullName>ProposalSummary__c</fullName>
    <description>Summary of proposed planning works.</description>
    <label>Proposal Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>