force-app/main/default/objects/PlanningApplication__c/fields/PublicComments__c.field-meta.xml
<CustomField>
    <fullName>PublicComments__c</fullName>
    <description>Comments captured from applicant or public consultation.</description>
    <label>Public Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>