force-app/main/default/objects/PlanningApplication__c/fields/ReceivedChannel__c.field-meta.xml
<CustomField>
    <fullName>ReceivedChannel__c</fullName>
    <description>Channel through which the application was received.</description>
    <label>Received Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Experience Portal</fullName><default>true</default><label>Experience Portal</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
            <value><fullName>Walk-In</fullName><default>false</default><label>Walk-In</label></value>
            <value><fullName>API</fullName><default>false</default><label>API</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>