force-app/main/default/objects/PlanningApplication__c/fields/ReferenceNumberExternal__c.field-meta.xml
<CustomField>
    <fullName>ReferenceNumberExternal__c</fullName>
    <description>External planning reference number used by partner systems.</description>
    <externalId>true</externalId>
    <label>External Reference Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>