force-app/main/default/objects/PlanningApplication__c/fields/SiteAddress__c.field-meta.xml
<CustomField>
    <fullName>SiteAddress__c</fullName>
    <description>Full site address entered by applicant.</description>
    <label>Site Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>