force-app/main/default/objects/PlanningApplication__c/fields/SubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedDate__c</fullName>
    <description>Date application was submitted by applicant.</description>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>