force-app/main/default/objects/PlanningApplication__c/fields/TargetDecisionDate__c.field-meta.xml
<CustomField>
    <fullName>TargetDecisionDate__c</fullName>
    <description>Target date for formal decision.</description>
    <label>Target Decision Date</label>
    <type>Date</type>
</CustomField>