force-app/main/default/objects/PlanningApplication__c/fields/ValidationDate__c.field-meta.xml
<CustomField>
    <fullName>ValidationDate__c</fullName>
    <description>Date application was validated by planning team.</description>
    <label>Validation Date</label>
    <type>Date</type>
</CustomField>