force-app/main/default/objects/PlanningApplication__c/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <description>Local authority ward for the site.</description>
    <label>Ward</label>
    <length>80</length>
    <type>Text</type>
</CustomField>